--- a/style.css
+++ b/style.css
@@ -18,17 +18,37 @@ h1 {
 
   .container {
     display: flex; 
-    /* padding-top: 2rem; */
+     padding-top: 2rem; 
+     padding-right: 50rem;
+     margin: 0;
+     padding: 0;
+     background-color: #3468c0;
   }
 
   .column {
     flex: 1; 
-    padding: 20px;
+    padding-right: 20px;
+    padding-bottom: 500px;
     border: 1px solid #ccc;
     margin: 0 10px; 
     color: #3468c0;
   }
-
+  .column2 {
+    flex: 1; 
+    padding-bottom: 50px;
+    padding-right: 700px;
+    border: 1px solid #ccc;
+    margin: 0 10px; 
+    color: #3468c0;
+  }
+  .column3 {
+    flex: 1; 
+    padding-right: 50px;
+    padding-bottom: 870px;
+    border: 1px solid #ccc;
+    margin: 0 10px; 
+    color: #3468c0;
+  }
   .profil img {
     width: 150px;
     height: 100px;
@@ -51,3 +71,4 @@ h1 {
     width: 20%;
     height: 20%;
 }
+
